objects/Class_Action_Reference__c.object
<CustomObject>
    <fields>
        <fullName>Claim__c</fullName>
        <label>Fall</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>Sammelklagen</relationshipLabel>
        <relationshipName>Class_Action_Referencies</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Class_Action__c</fullName>
        <label>Sammelklage</label>
        <referenceTo>Class_Action__c</referenceTo>
        <relationshipLabel>Fälle</relationshipLabel>
        <relationshipName>Class_Action_Referencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Old_Sammelklagenreferenz_ID__c</fullName>
        <label>Old Sammelklagenreferenz ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Claim__r.Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <label>Sammelklagenreferenz</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sammelklagenreferenzen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>